[package]
name = "chess"
version = "0.0.1"
edition = "2021"
authors = ["David Fraundorfer <david.fraundorfer@gmail.com>"]
description = "A simple chess game for educational purposes"
licence = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
